kubernetes/apps/home-automation/esphome/app/httproute-traefik.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: esphome-traefik
  annotations:
    external-dns.alpha.kubernetes.io/target: "traefik-int.ironstone.casa"
spec:
  hostnames:
    - esphome.ironstone.casa
    - esphome-traefik.ironstone.casa
  parentRefs:
    - name: traefik-internal
      namespace: network
      sectionName: websecure
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: oauth2-proxy-forward-auth
      backendRefs:
        - kind: Service
          name: esphome
          port: 6052
